<resources>
    <string name="app_name">GuDana</string>
    <string name="action_settings">Settings</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="action_add_favourite">Add to your Favourites</string>
    <string name="action_play_next">get more Informations</string>
    <string name="backdrop_title">GuDana Advertising </string>
    <string name="backdrop_subtitle">Advertising with future Partners,... </string>
    <string name="tab1">CALLS</string>
    <string name="tab2">CHATS</string>
    <string name="tab3">CONTACTS</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_without_icon">Without Icon</string>
    <string name="action_with_icon">With Icon</string>
    <string name="action_custom">Custom Tab</string>
    <string name="sendPhoto">Photo Camera</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_picture_title">Get Photo From</string>
    <string name="sendPhotoGallery">Photo Gallery</string>
    <string name="api_key_google_places">AIzaSyC9l_P-gudf8JNwsinXVnAzBpyPKgAXJNk</string>
    <string name="sendLocation">Send Location</string>
    <string name="locationTo">Localização Enviada</string>
    <string name="friends_list">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hold_micro">Hold the Microphone Button to Record</string>
    <string name="pick_contacts">Pick contact(s)</string>
    <string name="picked_contacts">Picked contact(s)</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_contacts">The contact picker won\'t work without this permission. Are you sure you want to deny this permission?</string>
    <string name="permission_deny">Deny</string>
    <string name="permission_retry">Re-try</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="custom_title">Images Picker</string>
    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>
    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="app_name_tablet">Bottom Navigation (Tablet)</string>
    <string name="app_name_custom_badges">Custom Badges</string>
    <string name="app_name_no_coordinator">No Coordinator</string>
    <string name="app_name_fixed_scroll">Fixed Scroll</string>
    <string name="menu_enable_disable_items">Disable Items</string>
    <string name="service_name">Linphone Service</string>
    <string name="addressbook_label">Linphone</string>
    <string name="notification_title">Linphone</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s registered</string>
    <string name="notification_register_failure">%s failed to register</string>
    <string name="tunnel_host"></string>
    <string name="about_version">Linphone Android %s</string>
    <string name="about_liblinphone_version">Linphone Core %s</string>
    <string name="about_text">GNU General Public License V2\n © 2010-2016 Belledonne Communications</string>
    <string name="about_link">www.linphone.org</string>
    <string name="sync_account_name">linphone contacts</string>
    <string name="history_date_format">EEE, d MMM</string>
    <string name="history_detail_date_format">yyyy/MM/dd - HH:mm - </string>
    <string name="inapp_popup_date_format">yyyy/MM/dd</string>
    <string name="inapp_popup_date_day">dd</string>
    <string name="messages_date_format">dd/MM, HH:mm</string>
    <string name="messages_list_date_format">dd/MM</string>
    <string name="today_date_format">HH:mm</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">Settings</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number ?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="app_description">GuDana Talk</string>
    <string name="welcome">Welcome</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
    <string name="assistant_linphone_login_desc">Please enter your username and password of Linphone account</string>
    <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
    <string name="assistant_login_linphone">Use Linphone account</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter an username, email and password for your Linphone account</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_linphone_account">Use your Linphone account</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\r\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already in use.</string>
    <string name="assistant_phone_number_unavailable">This phone number is already in used.\r\nPlease type a different number.\r\nYou can delete your existing account if you want to reuse your phone number.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="setup_confirm_username">Your username will be %s.\r\n\r\nIt may differ from your input to match requirements.\r\nDo you accept?</string>
    <string name="first_launch_no_login_password">Please enter your login and password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="select_your_country">Select your Country</string>
    <string name="country_code">(%s)</string>
    <string name="use_username_instead_or_phone_number">Use a username (optional)</string>
    <string name="status_not_connected">Not registered</string>
    <string name="content_description_menu">Menu</string>
    <string name="content_description_call_quality">Call quality</string>
    <string name="content_description_encryption">Encryption</string>
    <string name="return_home">return home</string>
</resources>