<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/status"
	android:background="@color/colorA"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal">
        
	<RelativeLayout
		android:id="@+id/status_bar"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ImageView
			android:id="@+id/return_home"
			android:src="@mipmap/return_home"
			android:contentDescription="@string/return_home"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<ImageView
			android:id="@+id/side_menu_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_toEndOf="@+id/call_quality"
			android:contentDescription="@string/content_description_menu"
			android:padding="10dp"
			android:src="@drawable/menu_burger" />

		<ImageView
			android:id="@+id/call_quality"
			android:src="@drawable/call_quality_indicator_0"
			android:contentDescription="@string/content_description_call_quality"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dp"
			android:layout_centerInParent="true"
			android:layout_alignParentLeft="true"
			android:visibility="invisible" />

		<ImageView
			android:id="@+id/status_led"
			android:layout_width="20dp"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_centerVertical="true"
			android:layout_marginStart="107dp"
			android:adjustViewBounds="true"
			android:paddingLeft="5dp"
			android:src="@drawable/led_disconnected" />

		<TextView
			android:id="@+id/status_text"
			style="@style/font16"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:gravity="center_vertical"
			android:paddingLeft="5dp"
			android:text="@string/status_not_connected" />

		<ImageView
			android:id="@+id/voicemail"
			android:src="@drawable/voicemail"
			android:layout_centerVertical="true"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:gravity="center_vertical"
			android:visibility="gone" />

		<TextView
			android:id="@+id/voicemail_count"
			style="@style/font16"
			android:layout_alignParentRight="true"
			android:paddingLeft="5dp"
			android:paddingRight="10dp"
			android:layout_centerVertical="true"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:visibility="gone" />

		<ImageView
			android:id="@+id/encryption"
			android:src="@drawable/security_ko"
			android:contentDescription="@string/content_description_encryption"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:adjustViewBounds="true"
			android:padding="5dp"
			android:layout_centerInParent="true"
			android:visibility="gone"
			android:layout_alignParentRight="true" />
	</RelativeLayout>
</RelativeLayout>