<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="sans-serif-light"
                android:textSize="23sp"
                android:layout_gravity="center"
                android:textColor="#F4FEFEFE"
                android:id="@+id/toolbar_title" />



            <RelativeLayout
                android:id="@+id/status_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <ImageView
                    android:id="@+id/call_quality"
                    android:src="@drawable/call_quality_indicator_0"
                    android:contentDescription="@string/content_description_call_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentLeft="true"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/status_led"
                    android:src="@drawable/led_disconnected"
                    android:paddingLeft="5dp"
                    android:adjustViewBounds="true"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/status_text"
                    android:text="@string/status_not_connected"
                    style="@style/font16"
                    android:paddingLeft="5dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_toRightOf="@id/status_led" />

                <ImageView
                    android:id="@+id/voicemail"
                    android:src="@drawable/voicemail"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/voicemail_count"
                    style="@style/font16"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/encryption"
                    android:src="@drawable/security_ko"
                    android:contentDescription="@string/content_description_encryption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>



        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs_nav"
            android:layout_width="match_parent"
            app:tabIndicatorColor="@color/tabIndicator"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.view.ViewPager
            android:id="@+id/container_nav"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorH"
            android:layout_above="@id/side_menu_quit"
            android:orientation="vertical">

            <include layout="@layout/side_menu_main_account"/>

            <ListView
                android:id="@+id/accounts_list"
                android:background="@color/colorH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice"
                android:cacheColorHint="@color/transparent"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"/>

            <ListView
                android:id="@+id/item_list"
                android:background="@color/colorH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice"
                android:divider="@color/colorE"
                android:listSelector="@color/colorH"
                android:footerDividersEnabled="true"
                android:dividerHeight="1dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorE"/>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>


